--- a/src/Dependencies.Exchange.Base/Dependencies.Exchange.Base.csproj
+++ b/src/Dependencies.Exchange.Base/Dependencies.Exchange.Base.csproj
@@ -4,4 +4,13 @@
     <OutputType>Library</OutputType>
     <UseWpf>true</UseWpf>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
