--- a/.github/workflows/wpfdotnet-core.yml
+++ b/.github/workflows/wpfdotnet-core.yml
@@ -1,9 +1,12 @@
 name:  WPF .NET Core
 
 on:
-  push
+  push:
+    branches:
+      - *
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
 
