Add continuous integration (#2)

--- a/.github/workflows/wpfdotnet-core.yml
+++ b/.github/workflows/wpfdotnet-core.yml
@@ -1,9 +1,20 @@
 name:  WPF .NET Core
 
-on:
-  push
+on: 
+  push:
+    paths-ignore:
+      - '**/doc/**'
+      - '**/README.md'
+      - '**/LICENSE'
+      - '**/.typo-ci.yml'
   pull_request:
-    branches: [ master ]
+    paths-ignore:
+      - '**/doc/**'
+      - '**/README.md'
+      - '**/LICENSE'
+      - '**/.typo-ci.yml'
+    branches:
+      - master
 
 jobs:
 
