--- a/.github/workflows/wpfdotnet-core.yml
+++ b/.github/workflows/wpfdotnet-core.yml
@@ -36,3 +36,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
       working-directory: src
+
+    - name: Test
+      run: dotnet test --configuration Release
+      working-directory: src
