--- a/src/Dependencies.Exchange.Graph/Dependencies.Exchange.Graph.csproj
+++ b/src/Dependencies.Exchange.Graph/Dependencies.Exchange.Graph.csproj
@@ -30,4 +30,10 @@
       <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Dependencies.Exchange.Graph.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
