--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,10 +1,8 @@
 <Project>
   <PropertyGroup>
-  	<Version>1.0.0.0</Version>
+  	<VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Xavier CLEMENCE</Authors>
     <Product>Dependencies Exchange</Product>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) Xavier CLEMENCE</Copyright>
   </PropertyGroup>
