--- a/.github/workflows/wpfdotnet-core.yml
+++ b/.github/workflows/wpfdotnet-core.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.X'
+        dotnet-version: '5.0.x'
 
     - name: Install dependencies
       run: dotnet restore
