--- a/src/Tests/Dependencies.Exchange.Graph.UnitTests/Dependencies.Exchange.Graph.UnitTests.csproj
+++ b/src/Tests/Dependencies.Exchange.Graph.UnitTests/Dependencies.Exchange.Graph.UnitTests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <AnalysisLevel>6.0</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
